# apis-instance-tibschol

./: .gitignore  README.md  manage.py  pyproject.toml
.github/: auto-deploy-values.yaml
.github/workflows/: deploy.yml
apis_ontology/: __init__.py  admin.py  data_model_utils.py  date_utils.py  export_utils.py  fields.py  filtersets.py  forms.py  models.py  querysets.py  serializers.py  signals.py  tables.py  urls.py  utils.py  views.py
apis_ontology/migrations/: 0001_initial.py  0002_person_versionperson_versionperson_collection.py  0003_alter_person_options.py  0004_versionwork_work_versionwork_collection.py  0005_instance_versioninstance_versioninstance_collection.py  0006_instance_availability_instance_item_description_and_more.py  0007_alter_instance_options.py  0008_instancecopiedwrittendownatplace_and_more.py  0009_excerpts.py  0010_alter_excerpts_source.py  0011_remove_place_end_date_remove_place_end_end_date_and_more.py  0012_remove_instance_end_date_and_more.py  0013_remove_instance_published_remove_person_published_and_more.py  0014_remove_instance_end_date_written_and_more.py  0015_alter_instance_start_date_written_and_more.py  0015_instance_published_person_published_place_published_and_more.py  0016_remove_instance_published_remove_person_published_and_more.py  0017_merge_20240613_1354.py  0018_alter_place_label_alter_versionplace_label.py  0019_remove_versionperson_collection_collection_and_more.py  0019_subject_alter_versionwork_subject_alter_work_subject_and_more.py  0020_alter_work_subject_vocab.py  0021_persondirectpredecessorinlineageofperson_subject_of_teaching_vocab_and_more.py  0022_personstudentofperson_subject_of_teaching_vocab_and_more.py  0023_remove_persondirectpredecessorinlineageofperson_subject_of_teaching_and_more.py  0024_personactiveatplace_subject_of_teaching_vocab.py  0025_alter_instanceiscopiedfrominstance_options_and_more.py  0026_instance_dimension_versioninstance_dimension.py  0027_rename_personannotatorofwork_personannotatorofinstance.py  0028_remove_versionperson_collection_collection_and_more.py  0029_alter_versioninstance_options_and_more.py  0030_alter_versioninstance_options_and_more.py  0030_merge_20241014_0949.py  0031_versioninstancecopiedwrittendownatplace_and_more.py  0032_remove_versionpersoneditorofinstance_history_user_and_more.py  0032_rename_name_person_name_latin_and_more.py  0033_remove_versionpersonillustratorofinstance_history_user_and_more.py  0034_remove_versionpersonlenderofinstance_history_user_and_more.py  0035_remove_versionpersonspiritualfriendofperson_history_user_and_more.py  0036_remove_versionpersonpromoterofwork_history_user_and_more.py  (+43 more)
apis_ontology/settings/: server_settings.py
apis_ontology/static/: citations.json  glossary-models.json  glossary-relations.json  glossary-terms.json
apis_ontology/templates/: base.html  base_old.html  datamodel.html  imprint.html  (+1 more)
data/: 20240513_relations.json  Drepung_Catalogue.csv  excerpts.csv  relations_dump.json  topics.csv
(+85 files in other folders)
