[project]
name = "apis-instance-tibschol"
version = "0.0.1"
description = "An APIS instance for the research project TibSchol"
authors = [{ name = "Saranya Balasubramanian", email = "saranya.balasubramanian@oeaw.ac.at" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2==2.9.*",
    "apis-core-rdf==0.58.2",
    "apis-acdhch-default-settings==2.16.0",
    "django-extensions==4.1.*",
    "tqdm==4.67.1",
    "pandas==2.3.3",
    "tablib[xlsx]==3.9.0",
    "lxml==6.0.2",
    "django-interval==0.5.1",
    "django-debug-toolbar==6.0.0",
    "tabulate==0.9.0",
]

[project.optional-dependencies]
dev = [
    "ipython==9.8.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.0",
    "django-stubs==5.2.7"
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
