[project]
name = "apis-instance-tibschol"
version = "0.0.1"
description = "An APIS instance for the research project TibSchol"
authors = [{ name = "Saranya Balasubramanian", email = "saranya.balasubramanian@oeaw.ac.at" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2==2.9.*",
    "apis-core-rdf==0.59.0",
    "apis-acdhch-default-settings==2.16.0",
    "django-extensions==4.1.*",
    "tqdm==4.67.3",
    "pandas==3.0.0",
    "tablib[xlsx]==3.9.0",
    "lxml==6.0.2",
    "django-interval==0.5.4",
    "django-debug-toolbar==6.1.0",
    "tabulate==0.10.0",
]

[project.optional-dependencies]
dev = [
    "ipython==9.11.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.5",
    "django-stubs==6.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
