[project]
name = "apis-instance-tibschol"
version = "0.0.1"
description = "An APIS instance for the research project TibSchol"
authors = [{ name = "Saranya Balasubramanian", email = "saranya.balasubramanian@oeaw.ac.at" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg2==2.9.*",
    "apis-core-rdf==0.64.5",
    "apis-acdhch-default-settings==2.20.0",
    "django-extensions==4.1.*",
    "tqdm>=4.68.3,<5",
    "pandas==3.0.1",
    "tablib[xlsx]==3.9.0",
    "lxml==6.1.0",
    "django-interval==0.5.4",
    "django-debug-toolbar==6.3.0",
    "tabulate==0.10.0",
    "django-tables2==2.8",
    "pyewts @ git+https://github.com/gythaogg/pyewts.git",
    "apis-data-explorer==0.0.8",
]

[project.optional-dependencies]
dev = [
    "ipython==9.13.0",
    "jupyter==1.1.1",
    "jupyterlab==4.5.6",
    "django-stubs==6.0.6"
]

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
